сверстан каркас CV

--- a/index.html
+++ b/index.html
@@ -1,13 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>CV</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>CV Kolesnikov</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="./css/style.css">
+    </head>
+    <body>
+        <div class="container-centered">
+            <div class="two-columns">
+            <div class="left-column">
+                <header>
+                <img src="./images/Portrait.jpg" alt="Portrait" width="204" height="204">
+                <h1>Kolesnikov Egor</h1>
+                <h2>Frontend Developer</h2>
+                </header>
+                <main>
+                <section class="contacts">
+                    <h3>Contacts</h3>
+                    <ul>
+                    <li>
+                        <img src="./icons/phone.svg" alt="Phone Icon" width="30" height="30">
+                        <p>+79969389375/+77781266859</p>
+                    </li>
+                    <li>
+                        <img src="./icons/email.svg" alt="Email Icon" width="30" height="30">
+                        <p>koles.e.13@mail.com</p>
+                    </li>
+                    <li>
+                        <img src="./icons/telegram.svg" alt="Telegram Icon" width="30" height="30">
+                        <p>@kolesbars</p>
+                    </li>
+                    <li>
+                        <img src="./icons/linkedin.svg" alt="LinkedIn Icon" width="30" height="30">
+                        <a href="https://www.linkedin.com/in/%D0%B5%D0%B3%D0%BE%D1%80-%D0%BA%D0%BE%D0%BB%D0%B5%D1%81%D0%BD%D0%B8%D0%BA%D0%BE%D0%B2-2a21a2246/">LinkedIn</a>
+                    </li>
+                    </ul>
+                </section>
+                <section class="skills">
+                    <h3>Skills</h3>
+                    <ul>
+                    <li>HTML5, CSS3</li>
+                    <li>JavaScript</li>
+                    <li>TypeScript</li>
+                    <li>React</li>
+                    <li>Redux</li>
+                    <li>Redux Toolkit</li>
+                    <li>Next</li>
+                    <li>Git</li>
+                    <li>Jest</li>
+                    </ul>
+                </section>
+                <section class="languages">
+                    <h3>Languages</h3>
+                    <ul>
+                    <li>
+                        <p class="language-name">English</p>
+                        <p>Pre-intermediate</p>
+                    </li>
+                    <li>
+                        <p class="language-name">Russian</p>
+                        <p>Native</p>
+                    </li>
+                    </ul>
+                </section>
+                </main>
+            </div>
+            <aside class="right-column">
+                <section class="about-myself">
+                <div class="sub-header">
+                    <img src="./icons/myself.svg" alt="About Myself Icon" width="30" height="30">
+                    <h3>About Myself</h3>
+                </div>
+                <p>I am a novice Frontend developer. I strive to become a professional in my field, for which I am ready to make every effort!
+                    Every day I strive to learn something new about development.
+                    Highly motivated, independent and goal-oriented.</p>
+                </section>
+                <section class="education">
+                <div class="sub-header">
+                    <img src="./icons/education.svg" alt="Education Icon" width="30" height="30">
+                    <h3>Education</h3>
+                </div>
+                <p><strong>Tomsk Polytechnic University</strong></p>
+                <p>Institute of Physics and Technology</p>
+                <p>Years: 2014 - 2020</p>
+                </section>
+                <section class="courses">
+                <div class="sub-header">
+                    <img src="./icons/courses.svg" alt="Courses" width="30" height="30">
+                    <h3>Courses</h3>
+                </div>
+                <ul>
+                    <li>HTML Academy: React developer profession</li>
+                </ul>
+                <img class="score-img" src="./images/w3schools-score_small.jpg" alt="W3schools Score" width="500">
+                </section>
+                <section class="code-example">
+                <div class="sub-header">
+                    <img src="./icons/code.svg" alt="Code Icon" width="30" height="30">
+                    <h3>Code example</h3>
+                </div>
+                <a href="https://github.com/kolesbars?tab=repositories"></a>
+                </section>
+            </aside>
+            </div>
+            <footer>
+            <a class="my-github" href="https://github.com/kolesbars">
+                <img class="github-icon" src="./icons/github.svg" alt="Github Icon" width="26" height="26">
+                <p>GitHub</p>
+            </a>
+            <a href="https://rs.school/js/">
+                <img src="./icons/rsschool.svg" alt="Rsschool Icon" width="73" height="26">
+            </a>
+            </footer>
+        </div>
+    </body>
 </html>
